syntax = "proto3";

option csharp_namespace = "AcceptsCoin.Services.IdentityServer.Protos";


package auth;


service AuthAppService{
    rpc Authenticate (AuthGm) returns (TokenGm);
}
message Empty{
}
message AuthGm {
    string username = 1;
    string password = 2;
}
message TokenGm {
    string Token = 1;
    int64 Expires = 2;
}