syntax = "proto3";

option csharp_namespace = "AcceptsCoin.Services.IdentityServer.Protos";


package user;


service UserAppService{
    rpc GetAll (UserQueryFilter) returns (UserListGm);
    rpc GetByPartnerId (UserPartnerIdQueryFilter) returns (UserListGm);
    rpc GetByRoleId (UserRoleIdQueryFilter) returns (UserListGm);
    rpc GetById (UserIdFilter) returns (UserGm);
    rpc GetProfile (EmptyUser) returns (UserProfileGm);
    rpc Post (CreateUserGm) returns (UserGm);
    rpc Put (UserGm) returns (UserGm);
    rpc Delete (UserIdFilter) returns (EmptyUser);
    rpc SoftDelete (UserIdFilter) returns (EmptyUser);
    rpc SoftDeleteCollection (UserDeleteCollectionGm) returns (EmptyUser);
    rpc SaveUserRole (UserRoleGm) returns (EmptyUser);


}
message UserRoleGm{
    string UserId =1;
    string RoleId=2;
}
message EmptyUser{
}


message UserIdFilter {
 string UserId = 1;
}
message UserDeleteCollectionGm {
 repeated UserIdFilter items = 1;
}
message UserRoleIdQueryFilter {
 int32 pageId = 1;
 int32 pageSize = 2;
 string roleId=3;
}
message UserPartnerIdQueryFilter {
 int32 pageId = 1;
 int32 pageSize = 2;
 string partnerId=3;
}
message UserQueryFilter {
 int32 pageId = 1;
 int32 pageSize = 2;
}

message UserProfileGm {
    string name = 1;
    string email = 2;
}
message CreateUserGm {
    string id = 1;
    string name = 2;
    string email = 3;
    optional string password = 4;
}
message UserGm {
    string id = 1;
    string name = 2;
    string email = 3;
    optional string password = 4;
    string userName=5;
    bool activate = 6;
    bool published = 7;
    string partner = 8;
}
message UserListGm {
    repeated UserGm items = 1;
    int32 currentPage = 2;
    int32 itemCount = 3;
    int32 pageCount = 4;
}